sumo/tests/od2trips/errors/default_false_arrivalpos/errors.od2trips
Error: Invalid arrivalPos definition for option 'arrivalpos';
 must be one of ("random", "max", or a float)
Quitting (on error).
